--- a/yohakuapp/templates/yohakuapp/base.html
+++ b/yohakuapp/templates/yohakuapp/base.html
@@ -27,12 +27,11 @@
           </div>
         </div>
       </div>
-  <div class='section header'>
+
+  <div class='header'>
     {%block main_content%}
 
     {%endblock%}
-
-
   </div>
 
   {%block tweets_block%}
