--- a/yohakuapp/templates/yohakuapp/base.html
+++ b/yohakuapp/templates/yohakuapp/base.html
@@ -39,11 +39,13 @@
 
   <div class='section sign-up'>
     <h2 id="about">About Yooohaku</h2>
-    <p>Share you innermost thoughts anonymously</p>
+      <p>Yooohaku lets you share you innermost thoughts anonymously</p>
+      <p>All thoughts shared are publicly visible here and on our twitter account (@yooohaku)
+        but do not contain any information about who shared them</p>
 
     <a href="https://twitter.com/yooohaku">follow us on twitter</a>
     <a href="https://twitter.com/yooohaku"><img src="{% static 'yohakuapp/twitter_icon.png' %}"
-                                                style="width:40px;height:40px;"></a>
+                                                style="width:35px;height:35px;"></a>
   </div>
 
   {%block additional_content%}
