--- a/yohakuapp/templates/yohakuapp/base.html
+++ b/yohakuapp/templates/yohakuapp/base.html
@@ -11,6 +11,7 @@
       {%endblock%}
 
     <link rel="stylesheet" type="text/css" href="{% static 'yohakuapp/yohakutheme.css' %}"/>
+    <link rel="icon" href="{% static 'yohakuapp/yohaku.png' %}"/>
   </head>
 
 
