--- a/yohakuapp/templates/yohakuapp/base.html
+++ b/yohakuapp/templates/yohakuapp/base.html
@@ -40,9 +40,9 @@
 
     <div class='section sign-up'>
         <h2 id="about">About Yooohaku</h2>
-        <p>Yooohaku lets you share you innermost thoughts anonymously</p>
-        <p>All thoughts shared are publicly visible here and on our twitter account (@yooohaku)
-            but do not contain any information about who shared them</p>
+        <p>Yooohaku lets you share your innermost thoughts anonymously</p>
+        <p>All thoughts shared are publicly visible on the website, and on our twitter account (@yooohaku).
+            They do not contain any information about who shared them</p>
 
         <a href="https://twitter.com/yooohaku">follow us on twitter</a>
         <a href="https://twitter.com/yooohaku"><img src="{% static 'yohakuapp/twitter_icon.png' %}"
