--- a/yohakuapp/templates/yohakuapp/base.html
+++ b/yohakuapp/templates/yohakuapp/base.html
@@ -12,6 +12,12 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'yohakuapp/yohakutheme.css' %}"/>
     <link rel="icon" href="{% static 'yohakuapp/yohaku.png' %}"/>
+    <meta name="theme-color" content="#5995DA" />
+    <!-- Change url bar color on Windows Phone -->
+    <meta name="msapplication-navbutton-color" content="#5995DA" />
+    <!-- Change url bar color on iOS Safari -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#5995DA" />
 </head>
 
 
@@ -51,7 +57,7 @@
 
     {%block additional_content%}
     <div class='section feature-1'>
-        geature 1
+        feature 1
     </div>
     <div class='section feature-2'>
         feature 2
