--- a/yohakuapp/templates/yohakuapp/base.html
+++ b/yohakuapp/templates/yohakuapp/base.html
@@ -3,14 +3,19 @@
 {%load static%}
 <head>
     <meta charset='UTF-8'/>
-    <meta name='viewport'
-          content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+    <meta
+      name='viewport'
+      content='width=device-width, initial-scale=1.0, maximum-scale=1.0'
+    />
 
     {%block title_block%}
     <title>Yooohaku!</title>
     {%endblock%}
 
-    <link rel="stylesheet" type="text/css" href="{% static 'yohakuapp/yohakutheme.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'site.css' %}"/>
+    <script src="https://kit.fontawesome.com/56e0bd7b72.js" crossorigin="anonymous"></script>
+    <script src="{% static 'yohakuapp/scripts.js' %}" defer></script>
+    
     <link rel="icon" href="{% static 'yohakuapp/yohaku.png' %}"/>
     <meta name="theme-color" content="#5995DA" />
     <!-- Change url bar color on Windows Phone -->
@@ -22,50 +27,123 @@
 
 
 <body>
-<div class='page'>
-    <div class ="section menu-container">
-        <div class='section menu'>
-            <div>Yooohaku!</div>
-            <div class='links'>
-                {%block links_block%}
-                {%endblock%}
-                <div class='last-link'><a href="#about">About</a></div>
-
-            </div>
-        </div>
-    </div>
-
-    <div class='header'>
-        {%block main_content%}
-
-        {%endblock%}
-    </div>
+<div class='relative bg-gray-100'>
+  <div class='absolute top-0 left-0 right-0 mt-5 lg:mt-8 flex justify-center'>
+    <form action='' id='search_tweets' method='get' class='flex items-center'>
+      <div
+        id='search_icon'
+        class='rounded-full transform "rotate-45" transition w-14 h-14 mr-4 flex items-center justify-center border-2 border-brand-blue bg-white shadow-md'
+      >
+        <i class="fas fa-search text-lg text-gray-600"></i>
+      </div>
+      <label for='search' class='sr-only'>search tweets</label>
+      <input
+        class="rounded-lg py-2.5 px-4 outline-none shadow-md border-2 border-gray-300 focus:border-brand-blue hover:border-brand-blue"
+        type='search'
+        placeholder="search thought"
+        name='q'
+        id='search'
+        autocomplete="off"
+        value={{query_string}}
+      >
+    </form>
+  </div>
 
     {%block tweets_block%}
     {%endblock%}
 
-    <div class='section sign-up'>
-        <h2 id="about">About Yooohaku</h2>
-        <p>Yooohaku lets you share your innermost thoughts anonymously</p>
-        <p>All thoughts shared are publicly visible on the website, and on our twitter account (@yooohaku).
-            They do not contain any information about who shared them</p>
+    <div
+      class='h-screen hidden absolute z-20 bottom-0 right-0 left-0 flex flex-col justify-end backdrop backdrop-blur-5'
+      id='form'
+    >
+      <button
+        class='border-2 border-red-500 text-gray-500 hover:text-red-500 transition text-2xl rounded-full bg-white w-14 h-14 mb-8 mx-auto'
+        id='close_form'
+      >
+        <p class="sr-only">Close create new tweet section</p>
+        <i class="fas fa-arrow-down"></i>
+      </button>
 
-        <a href="https://twitter.com/yooohaku">follow us on twitter</a>
-        <a href="https://twitter.com/yooohaku"><img src="{% static 'yohakuapp/twitter_icon.png' %}"
-                                                    style="width:35px;height:35px;"></a>
+      <div class="bg-white border-t border-gray-300 px-8 py-12 flex justify-center h-3/4">
+        <div class='flex flex-col items-center text-center w-full'>
+          <form action=''
+            id="post_tweet"
+            method="post"
+            class='flex flex-col justify-between h-full w-full max-w-md'
+          >
+            {%csrf_token%}
+                {%for hidden in form.hidden_fields%}
+                  {{hidden}}
+                {%endfor%}
+    
+                {{field.tweet_content.errors}}
+                {{field.tweet_content.help_text}}
+                <textarea
+                  name="tweet_content"
+                  class="h-full twitter-form outline-none"
+                  required=""
+                  id="id_tweet_content"
+                  placeholder="Whats on your mind..."
+                  ></textarea>
+                <input
+                  type="submit"
+                  value="Share"
+                  name="submit"
+                  class="w-full rounded-lg px-1.5 py-2 bg-brand-blue hover:bg-blue-700 transition mt-4 font-semibold text-white cursor-pointer"
+                >
+            </form>
+        </div>
+      </div>
     </div>
 
-    {%block additional_content%}
-    <div class='section feature-1'>
-        feature 1
+    <div
+      class='h-screen hidden absolute z-20 bottom-0 right-0 left-0 flex flex-col justify-end backdrop backdrop-blur-5'
+      id='about'
+    >
+      <button
+        class='border-2 border-red-500 text-gray-500 hover:text-red-500 transition text-2xl rounded-full bg-white w-14 h-14 mb-8 mx-auto'
+        id='close_about'
+      >
+        <p class="sr-only">Close about section</p>
+        <i class="fas fa-arrow-down"></i>
+      </button>
+
+      <div class="bg-white border-t border-gray-300 px-8 py-12 flex justify-center h-3/4">
+        <div class='flex flex-col items-center text-center max-w-md'>
+          <h2 class="font-bold text-3xl text-gray-800 mb-5">About Yooohaku</h2>
+          <p class="text-gray-600 mb-2">Yooohaku lets you share your innermost thoughts anonymously</p>
+          <p class="text-gray-600 mb-4">All thoughts shared are publicly visible on the website, and on our twitter account (@yooohaku).
+              They do not contain any information about who shared them.</p>
+
+          <a href="https://twitter.com/yooohaku" class="flex flex-col items-center group">
+            <p class='text-gray-500 font-bold mb-2 group-hover:text-brand-blue transition '>Follow Yooohaku on twitter</p>
+            <i class="fab fa-twitter text-brand-blue text-4xl"></i>
+          </a>
+        </div>
+      </div>
     </div>
-    <div class='section feature-2'>
-        feature 2
-    </div>
-    <div class='section feature-3'>
-        feature 3
-    </div>
-    {%endblock%}
+
+
+    <button
+      id='open_form'
+      class="absolute bottom-20 right-5 w-14 h-14 border-2 border-brand-blue shadow-md hover:shadow-lg focus:shadow-lg rounded-full outline-none bg-white text-gray-700 hover:text-blue-700 focus:text-blue-700 transition transform hover:-rotate-45 focus:-rotate-45"
+      >
+      <p class='sr-only'>Share New Tweet</p>
+      <i class="fas fa-feather text-xl"></i>
+    </button>
+    <nav class='flex justify-between px-10 md:px-40 py-4 border-t shadow-md border-gray-400 z-10 bg-white absolute bottom-0 left-0 right-0'>
+        <a href='https://twitter.com/yooohaku' class='text-2xl text-gray-700 hover:text-brand-blue focus:text-brand-blue transition cursor-pointer'>
+          <p class='sr-only'>Visit Yohaku on Twitter</p>
+          <i class="fab fa-twitter"></i>
+        </a>
+        <button
+          id='open_about'
+          class='text-2xl text-gray-700 hover:text-brand-blue focus:text-brand-blue cursor-pointer transition outline-none'
+          >
+          <p class='sr-only'>About Yohaku</p>
+          <i class="fas fa-info"></i>
+        </button>
+    </nav>
 
 </div>
 </body>
