--- a/yohakuapp/templates/yohakuapp/base.html
+++ b/yohakuapp/templates/yohakuapp/base.html
@@ -12,7 +12,7 @@
     <title>Yooohaku!</title>
     {%endblock%}
 
-    <link rel="stylesheet" type="text/css" href="{% static 'site.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'yohakuapp/site.css' %}"/>
     <script src="https://kit.fontawesome.com/56e0bd7b72.js" crossorigin="anonymous"></script>
     <script src="{% static 'yohakuapp/scripts.js' %}" defer></script>
     
