--- a/yohakuapp/templates/yohakuapp/base.html
+++ b/yohakuapp/templates/yohakuapp/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='en' class='h-full'>
-{%load static%}
-<head>
+  {%load static%}
+  <head>
     <meta charset='UTF-8'/>
     <meta
       name='viewport'
@@ -9,7 +9,7 @@
     />
 
     {%block title_block%}
-    <title>Yooohaku!</title>
+      <title>Yooohaku!</title>
     {%endblock%}
 
     <link rel="stylesheet" type="text/css" href="{% static 'yohakuapp/site.css' %}"/>
@@ -23,31 +23,31 @@
     <!-- Change url bar color on iOS Safari -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="#5995DA" />
-</head>
+  </head>
 
 
 <body class='h-full bg-gray-100'>
-<div class='relative h-full'>
-  <div class='absolute top-0 left-0 right-0 mt-5 lg:mt-8 flex justify-center'>
-    <form action='' id='search_tweets' method='get' class='flex items-center'>
-      <div
-        id='search_icon'
-        class='rounded-full transform "rotate-45" transition w-14 h-14 mr-4 flex items-center justify-center border-2 border-brand-blue bg-white shadow-md'
-      >
-        <i class="fas fa-search text-lg text-gray-600"></i>
-      </div>
-      <label for='search' class='sr-only'>search tweets</label>
-      <input
-        class="rounded-lg py-2.5 px-4 outline-none shadow-md border-2 border-gray-300 focus:border-brand-blue hover:border-brand-blue"
-        type='search'
-        placeholder="Search thoughts.."
-        name='q'
-        id='search'
-        autocomplete="off"
-        value={{query_string}}
-      >
-    </form>
-  </div>
+  <div class='h-full'>
+    <div class='absolute top-0 left-0 right-0 mt-5 lg:mt-8 flex justify-center'>
+      <form action='' id='search_tweets' method='get' class='flex items-center'>
+        <div
+          id='search_icon'
+          class='rounded-full transform "rotate-45" transition w-14 h-14 mr-4 flex items-center justify-center border-2 border-brand-blue bg-white shadow-md'
+        >
+          <i class="fas fa-search text-lg text-gray-600"></i>
+        </div>
+        <label for='search' class='sr-only'>search tweets</label>
+        <input
+          class="rounded-lg py-2.5 px-4 outline-none shadow-md border-2 border-gray-300 focus:border-brand-blue hover:border-brand-blue"
+          type='search'
+          placeholder="Search thoughts.."
+          name='q'
+          id='search'
+          autocomplete="off"
+          value={{query_string}}
+        >
+      </form>
+    </div>
 
     {%block tweets_block%}
     {%endblock%}
@@ -131,20 +131,21 @@
       <p class='sr-only'>Share New Tweet</p>
       <i class="fas fa-feather text-xl"></i>
     </button>
+    
     <nav class='flex justify-between px-10 md:px-40 py-4 border-t shadow-md border-gray-400 z-10 bg-white absolute bottom-0 left-0 right-0'>
-        <a href='https://twitter.com/yooohaku' class='text-2xl text-gray-700 hover:text-brand-blue focus:text-brand-blue transition cursor-pointer'>
-          <p class='sr-only'>Visit Yohaku on Twitter</p>
-          <i class="fab fa-twitter"></i>
-        </a>
-        <button
-          id='open_about'
-          class='text-2xl text-gray-700 hover:text-brand-blue focus:text-brand-blue cursor-pointer transition focus:outline-none'
-          >
-          <p class='sr-only'>About Yohaku</p>
-          <i class="fas fa-info"></i>
-        </button>
+      <a href='https://twitter.com/yooohaku' class='text-2xl text-gray-700 hover:text-brand-blue focus:text-brand-blue transition cursor-pointer'>
+        <p class='sr-only'>Visit Yohaku on Twitter</p>
+        <i class="fab fa-twitter"></i>
+      </a>
+      <button
+        id='open_about'
+        class='text-2xl text-gray-700 hover:text-brand-blue focus:text-brand-blue cursor-pointer transition focus:outline-none'
+        >
+        <p class='sr-only'>About Yohaku</p>
+        <i class="fas fa-info"></i>
+      </button>
     </nav>
 
-</div>
+  </div>
 </body>
 </html>
